dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

dnl *** check for programs ***************************************
# check for c compiler
AC_PROG_CC

dnl *** check for X11 ***************************************
AC_PATH_X
if test "$with_x" != no; then
    if test "x$x_libraries" = "x"; then
        x_libraries=.
    fi
    AC_CHECK_LIB([X11], [XOpenDisplay],
        [HAVE_X11=1
         if test "x$x_libraries" != "x"; then
             LDFLAGS="$LDFLAGS -L$x_libraries"
         fi
         if test "x$x_includes" != "x"; then
             CPPFLAGS="$CPPFLAGS -I$x_includes"
         fi
         LIBS="-lX11 $LIBS"
        ],
        [],
        [[-lXt -L$x_libraries]])
fi

dnl *** check for libraries **************************************
# search for Gtk+
PKG_CHECK_MODULES(GTK, gtk+-2.0 >=  2.4.0, HAVE_GTK="yes", AC_MSG_ERROR(Cannot find GTK: Is
gtk-config in path?))
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
if test "x$HAVE_GTK" != xyes ; then
    AC_CHECK_LIB(gtk-x11-2.0, gtk_init, , AC_MSG_ERROR(Cannot find GTK-x11: Is
gtk-config in path?))
fi

PKG_CHECK_MODULES(GTKGLEXT, gtkglext-1.0 >=  1.0, HAVE_GTKGLEXT="yes", AC_MSG_ERROR(Cannot find GTKGLEXT: Is
gtk-config in path?))
AC_SUBST(GTKGLEXT_CFLAGS)
AC_SUBST(GTKGLEXT_LIBS)

dnl *** compiler characteristic **********************************
# Use -Wall
CFLAGS="$CFLAGS -Wall"

dnl *** Autoconf output - Makefiles  *****************************
AC_OUTPUT([
Makefile
])
